parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> BEGIN PROGRAM createDirProc ID altaPrograma SEMICOLON a LBRACKET b main RBRACKET SEMICOLON END
Rule 2     createDirProc -> <empty>
Rule 3     altaPrograma -> <empty>
Rule 4     a -> vars
Rule 5     a -> <empty>
Rule 6     vars -> VAR createGlobalTable c
Rule 7     createGlobalTable -> <empty>
Rule 8     c -> f SEMICOLON e
Rule 9     f -> d COLON tipo saveTipo
Rule 10    f -> matrix
Rule 11    saveTipo -> <empty>
Rule 12    d -> ID saveVarID
Rule 13    d -> ID saveVarID COMMA d
Rule 14    saveVarID -> <empty>
Rule 15    tipo -> INT
Rule 16    tipo -> FLOAT
Rule 17    tipo -> BOOL
Rule 18    tipo -> STRING
Rule 19    matrix -> mataux COLON INT
Rule 20    mataux -> ID saveMatrixID LSQUAREBRACKET CTEINT RSQUAREBRACKET LSQUAREBRACKET CTEINT RSQUAREBRACKET
Rule 21    mataux -> ID saveMatrixID LSQUAREBRACKET CTEINT RSQUAREBRACKET LSQUAREBRACKET CTEINT RSQUAREBRACKET COMMA mataux
Rule 22    saveMatrixID -> <empty>
Rule 23    e -> c
Rule 24    e -> <empty>
Rule 25    b -> funcion b
Rule 26    b -> <empty>
Rule 27    funcion -> FUNC g ID altaFuncion LPARENTHESIS h RPARENTHESIS funcvars altaInicioFunc bloque SEMICOLON ENDFUNC accionRetorno
Rule 28    accionRetorno -> <empty>
Rule 29    funcvars -> vars
Rule 30    funcvars -> <empty>
Rule 31    altaFuncion -> <empty>
Rule 32    altaInicioFunc -> <empty>
Rule 33    g -> INT
Rule 34    g -> BOOL
Rule 35    g -> FLOAT
Rule 36    g -> VOID
Rule 37    h -> param
Rule 38    h -> <empty>
Rule 39    param -> ID COLON tipo saveParamVar j
Rule 40    saveParamVar -> <empty>
Rule 41    j -> COMMA param
Rule 42    j -> <empty>
Rule 43    main -> MAIN altaMain LPARENTHESIS RPARENTHESIS k bloque SEMICOLON ENDFUNC
Rule 44    altaMain -> <empty>
Rule 45    k -> vars
Rule 46    k -> <empty>
Rule 47    bloque -> LBRACKET l RBRACKET
Rule 48    l -> estatuto l
Rule 49    l -> <empty>
Rule 50    estatuto -> estatutotipos SEMICOLON
Rule 51    estatutotipos -> asignacion
Rule 52    estatutotipos -> condicion
Rule 53    estatutotipos -> ciclo
Rule 54    estatutotipos -> escritura
Rule 55    estatutotipos -> llamadafunc
Rule 56    estatutotipos -> specialfunc
Rule 57    estatutotipos -> return
Rule 58    asignacion -> ID exp_asign aa EQUAL exp_12 expresion exp_13
Rule 59    exp_asign -> <empty>
Rule 60    exp_12 -> <empty>
Rule 61    exp_13 -> <empty>
Rule 62    aa -> LSQUAREBRACKET exp RSQUAREBRACKET LSQUAREBRACKET exp RSQUAREBRACKET
Rule 63    aa -> <empty>
Rule 64    expresion -> specialexp m exp_9 n
Rule 65    m -> o exp_8 specialexp
Rule 66    m -> <empty>
Rule 67    o -> AND
Rule 68    o -> OR
Rule 69    exp_8 -> <empty>
Rule 70    exp_9 -> <empty>
Rule 71    n -> expresion
Rule 72    n -> <empty>
Rule 73    specialexp -> exp p exp_11
Rule 74    p -> q exp_10 exp
Rule 75    p -> <empty>
Rule 76    q -> GREATERTHAN
Rule 77    q -> LESSTHAN
Rule 78    q -> NOTEQUAL
Rule 79    q -> LESSEQUAL
Rule 80    q -> GREATEREQUAL
Rule 81    q -> EQUALEQUAL
Rule 82    exp_10 -> <empty>
Rule 83    exp_11 -> <empty>
Rule 84    exp -> termino exp_5 ab
Rule 85    exp_5 -> <empty>
Rule 86    ab -> ab2 exp_3 exp
Rule 87    ab -> <empty>
Rule 88    ab2 -> PLUS
Rule 89    ab2 -> MINUS
Rule 90    exp_3 -> <empty>
Rule 91    termino -> factor exp_4 ac
Rule 92    exp_4 -> <empty>
Rule 93    ac -> ac2 exp_2 termino
Rule 94    ac -> <empty>
Rule 95    exp_2 -> <empty>
Rule 96    ac2 -> PRODUCT
Rule 97    ac2 -> DIVISION
Rule 98    factor -> ad
Rule 99    factor -> ae
Rule 100   factor -> af
Rule 101   factor -> opfunc
Rule 102   ad -> LPARENTHESIS exp_6 expresion RPARENTHESIS exp_7
Rule 103   exp_6 -> <empty>
Rule 104   exp_7 -> <empty>
Rule 105   ae -> ag varcte
Rule 106   af -> llamadafunc
Rule 107   ag -> PLUS
Rule 108   ag -> MINUS
Rule 109   ag -> <empty>
Rule 110   varcte -> CTEINT exp_cte_int
Rule 111   varcte -> CTEFLOAT exp_cte_float
Rule 112   varcte -> ctebool exp_cte_bool
Rule 113   varcte -> CTESTRING exp_cte_string
Rule 114   varcte -> ID r exp_1
Rule 115   exp_cte_int -> <empty>
Rule 116   exp_cte_float -> <empty>
Rule 117   ctebool -> TRUE
Rule 118   ctebool -> FALSE
Rule 119   exp_cte_bool -> <empty>
Rule 120   exp_cte_string -> <empty>
Rule 121   r -> LSQUAREBRACKET exp RSQUAREBRACKET LSQUAREBRACKET exp RSQUAREBRACKET
Rule 122   r -> <empty>
Rule 123   exp_1 -> <empty>
Rule 124   condicion -> IF LPARENTHESIS expresion RPARENTHESIS estatuto_if_1 bloque s estatuto_endif
Rule 125   estatuto_if_1 -> <empty>
Rule 126   s -> ELSE estatuto_else bloque
Rule 127   s -> <empty>
Rule 128   estatuto_else -> <empty>
Rule 129   estatuto_endif -> <empty>
Rule 130   ciclo -> WHILE estatuto_while_1 LPARENTHESIS expresion RPARENTHESIS estatuto_while_2 bloque estatuto_while_3
Rule 131   estatuto_while_1 -> <empty>
Rule 132   estatuto_while_2 -> <empty>
Rule 133   estatuto_while_3 -> <empty>
Rule 134   escritura -> PRINT LPARENTHESIS ah RPARENTHESIS
Rule 135   estatuto_print -> <empty>
Rule 136   ah -> expresion estatuto_print ai
Rule 137   ah -> CTESTRING estatuto_print ai
Rule 138   ai -> COMMA ah
Rule 139   ai -> <empty>
Rule 140   llamadafunc -> CALL ID estatuto_llamadafunc_1 LPARENTHESIS t RPARENTHESIS
Rule 141   estatuto_llamadafunc_1 -> <empty>
Rule 142   t -> u
Rule 143   t -> <empty>
Rule 144   u -> exp
Rule 145   u -> exp COMMA u
Rule 146   return -> RETURN exp
Rule 147   specialfunc -> opfunc
Rule 148   specialfunc -> dibujafunc
Rule 149   opfunc -> randomfunc
Rule 150   randomfunc -> RANDOM LPARENTHESIS exp COMMA exp RPARENTHESIS
Rule 151   dibujafunc -> al am an
Rule 152   al -> linewidthfunc
Rule 153   al -> <empty>
Rule 154   am -> linecolorfunc
Rule 155   am -> <empty>
Rule 156   an -> dibuja
Rule 157   an -> startfillfunc dibuja stopfillfunc
Rule 158   linewidthfunc -> LINEWIDTH LPARENTHESIS exp RPARENTHESIS SEMICOLON
Rule 159   linecolorfunc -> LINECOLOR LPARENTHESIS exp RPARENTHESIS SEMICOLON
Rule 160   dibuja -> v RPARENTHESIS
Rule 161   v -> LINE lineparam
Rule 162   v -> SQUARE squareparam
Rule 163   v -> CIRCLE circleparam
Rule 164   v -> STAR starparam
Rule 165   v -> TRIANGLE triangleparam
Rule 166   v -> ARC arcparam
Rule 167   lineparam -> LPARENTHESIS exp COMMA exp COMMA exp COMMA exp
Rule 168   squareparam -> LPARENTHESIS exp COMMA exp COMMA exp
Rule 169   circleparam -> LPARENTHESIS exp COMMA exp COMMA exp
Rule 170   starparam -> LPARENTHESIS exp COMMA exp COMMA exp
Rule 171   triangleparam -> LPARENTHESIS exp COMMA exp COMMA exp
Rule 172   arcparam -> LPARENTHESIS exp COMMA exp COMMA exp COMMA exp COMMA exp
Rule 173   startfillfunc -> STARTFILL LPARENTHESIS exp RPARENTHESIS SEMICOLON
Rule 174   stopfillfunc -> STOPFILL LPARENTHESIS RPARENTHESIS

Terminals, with rules where they appear

AND                  : 67
ARC                  : 166
BEGIN                : 1
BOOL                 : 17 34
CALL                 : 140
CIRCLE               : 163
COLON                : 9 19 39
COMMA                : 13 21 41 138 145 150 167 167 167 168 168 169 169 170 170 171 171 172 172 172 172
CTEFLOAT             : 111
CTEINT               : 20 20 21 21 110
CTESTRING            : 113 137
DIVISION             : 97
ELSE                 : 126
END                  : 1
ENDFUNC              : 27 43
EQUAL                : 58
EQUALEQUAL           : 81
FALSE                : 118
FLOAT                : 16 35
FUNC                 : 27
GREATEREQUAL         : 80
GREATERTHAN          : 76
ID                   : 1 12 13 20 21 27 39 58 114 140
IF                   : 124
INT                  : 15 19 33
LBRACKET             : 1 47
LESSEQUAL            : 79
LESSTHAN             : 77
LINE                 : 161
LINECOLOR            : 159
LINEWIDTH            : 158
LPARENTHESIS         : 27 43 102 124 130 134 140 150 158 159 167 168 169 170 171 172 173 174
LSQUAREBRACKET       : 20 20 21 21 62 62 121 121
MAIN                 : 43
MINUS                : 89 108
NOTEQUAL             : 78
OR                   : 68
PLUS                 : 88 107
PRINT                : 134
PRODUCT              : 96
PROGRAM              : 1
RANDOM               : 150
RBRACKET             : 1 47
RETURN               : 146
RPARENTHESIS         : 27 43 102 124 130 134 140 150 158 159 160 173 174
RSQUAREBRACKET       : 20 20 21 21 62 62 121 121
SEMICOLON            : 1 1 8 27 43 50 158 159 173
SQUARE               : 162
STAR                 : 164
STARTFILL            : 173
STOPFILL             : 174
STRING               : 18
TRIANGLE             : 165
TRUE                 : 117
VAR                  : 6
VOID                 : 36
WHILE                : 130
error                : 

Nonterminals, with rules where they appear

a                    : 1
aa                   : 58
ab                   : 84
ab2                  : 86
ac                   : 91
ac2                  : 93
accionRetorno        : 27
ad                   : 98
ae                   : 99
af                   : 100
ag                   : 105
ah                   : 134 138
ai                   : 136 137
al                   : 151
altaFuncion          : 27
altaInicioFunc       : 27
altaMain             : 43
altaPrograma         : 1
am                   : 151
an                   : 151
arcparam             : 166
asignacion           : 51
b                    : 1 25
bloque               : 27 43 124 126 130
c                    : 6 23
ciclo                : 53
circleparam          : 163
condicion            : 52
createDirProc        : 1
createGlobalTable    : 6
ctebool              : 112
d                    : 9 13
dibuja               : 156 157
dibujafunc           : 148
e                    : 8
escritura            : 54
estatuto             : 48
estatuto_else        : 126
estatuto_endif       : 124
estatuto_if_1        : 124
estatuto_llamadafunc_1 : 140
estatuto_print       : 136 137
estatuto_while_1     : 130
estatuto_while_2     : 130
estatuto_while_3     : 130
estatutotipos        : 50
exp                  : 62 62 73 74 86 121 121 144 145 146 150 150 158 159 167 167 167 167 168 168 168 169 169 169 170 170 170 171 171 171 172 172 172 172 172 173
exp_1                : 114
exp_10               : 74
exp_11               : 73
exp_12               : 58
exp_13               : 58
exp_2                : 93
exp_3                : 86
exp_4                : 91
exp_5                : 84
exp_6                : 102
exp_7                : 102
exp_8                : 65
exp_9                : 64
exp_asign            : 58
exp_cte_bool         : 112
exp_cte_float        : 111
exp_cte_int          : 110
exp_cte_string       : 113
expresion            : 58 71 102 124 130 136
f                    : 8
factor               : 91
funcion              : 25
funcvars             : 27
g                    : 27
h                    : 27
j                    : 39
k                    : 43
l                    : 47 48
linecolorfunc        : 154
lineparam            : 161
linewidthfunc        : 152
llamadafunc          : 55 106
m                    : 64
main                 : 1
mataux               : 19 21
matrix               : 10
n                    : 64
o                    : 65
opfunc               : 101 147
p                    : 73
param                : 37 41
programa             : 0
q                    : 74
r                    : 114
randomfunc           : 149
return               : 57
s                    : 124
saveMatrixID         : 20 21
saveParamVar         : 39
saveTipo             : 9
saveVarID            : 12 13
specialexp           : 64 65
specialfunc          : 56
squareparam          : 162
starparam            : 164
startfillfunc        : 157
stopfillfunc         : 157
t                    : 140
termino              : 84 93
tipo                 : 9 39
triangleparam        : 165
u                    : 142 145
v                    : 160
varcte               : 105
vars                 : 4 29 45

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . BEGIN PROGRAM createDirProc ID altaPrograma SEMICOLON a LBRACKET b main RBRACKET SEMICOLON END

    BEGIN           shift and go to state 1

    programa                       shift and go to state 2

state 1

    (1) programa -> BEGIN . PROGRAM createDirProc ID altaPrograma SEMICOLON a LBRACKET b main RBRACKET SEMICOLON END

    PROGRAM         shift and go to state 3


state 2

    (0) S' -> programa .



state 3

    (1) programa -> BEGIN PROGRAM . createDirProc ID altaPrograma SEMICOLON a LBRACKET b main RBRACKET SEMICOLON END
    (2) createDirProc -> .

    ID              reduce using rule 2 (createDirProc -> .)

    createDirProc                  shift and go to state 4

state 4

    (1) programa -> BEGIN PROGRAM createDirProc . ID altaPrograma SEMICOLON a LBRACKET b main RBRACKET SEMICOLON END

    ID              shift and go to state 5


state 5

    (1) programa -> BEGIN PROGRAM createDirProc ID . altaPrograma SEMICOLON a LBRACKET b main RBRACKET SEMICOLON END
    (3) altaPrograma -> .

    SEMICOLON       reduce using rule 3 (altaPrograma -> .)

    altaPrograma                   shift and go to state 6

state 6

    (1) programa -> BEGIN PROGRAM createDirProc ID altaPrograma . SEMICOLON a LBRACKET b main RBRACKET SEMICOLON END

    SEMICOLON       shift and go to state 7


state 7

    (1) programa -> BEGIN PROGRAM createDirProc ID altaPrograma SEMICOLON . a LBRACKET b main RBRACKET SEMICOLON END
    (4) a -> . vars
    (5) a -> .
    (6) vars -> . VAR createGlobalTable c

    LBRACKET        reduce using rule 5 (a -> .)
    VAR             shift and go to state 10

    a                              shift and go to state 8
    vars                           shift and go to state 9

state 8

    (1) programa -> BEGIN PROGRAM createDirProc ID altaPrograma SEMICOLON a . LBRACKET b main RBRACKET SEMICOLON END

    LBRACKET        shift and go to state 11


state 9

    (4) a -> vars .

    LBRACKET        reduce using rule 4 (a -> vars .)


state 10

    (6) vars -> VAR . createGlobalTable c
    (7) createGlobalTable -> .

    ID              reduce using rule 7 (createGlobalTable -> .)

    createGlobalTable              shift and go to state 12

state 11

    (1) programa -> BEGIN PROGRAM createDirProc ID altaPrograma SEMICOLON a LBRACKET . b main RBRACKET SEMICOLON END
    (25) b -> . funcion b
    (26) b -> .
    (27) funcion -> . FUNC g ID altaFuncion LPARENTHESIS h RPARENTHESIS funcvars altaInicioFunc bloque SEMICOLON ENDFUNC accionRetorno

    MAIN            reduce using rule 26 (b -> .)
    FUNC            shift and go to state 14

    b                              shift and go to state 15
    funcion                        shift and go to state 13

state 12

    (6) vars -> VAR createGlobalTable . c
    (8) c -> . f SEMICOLON e
    (9) f -> . d COLON tipo saveTipo
    (10) f -> . matrix
    (12) d -> . ID saveVarID
    (13) d -> . ID saveVarID COMMA d
    (19) matrix -> . mataux COLON INT
    (20) mataux -> . ID saveMatrixID LSQUAREBRACKET CTEINT RSQUAREBRACKET LSQUAREBRACKET CTEINT RSQUAREBRACKET
    (21) mataux -> . ID saveMatrixID LSQUAREBRACKET CTEINT RSQUAREBRACKET LSQUAREBRACKET CTEINT RSQUAREBRACKET COMMA mataux

    ID              shift and go to state 21

    c                              shift and go to state 16
    d                              shift and go to state 17
    f                              shift and go to state 18
    mataux                         shift and go to state 20
    matrix                         shift and go to state 19

state 13

    (25) b -> funcion . b
    (25) b -> . funcion b
    (26) b -> .
    (27) funcion -> . FUNC g ID altaFuncion LPARENTHESIS h RPARENTHESIS funcvars altaInicioFunc bloque SEMICOLON ENDFUNC accionRetorno

    MAIN            reduce using rule 26 (b -> .)
    FUNC            shift and go to state 14

    b                              shift and go to state 22
    funcion                        shift and go to state 13

state 14

    (27) funcion -> FUNC . g ID altaFuncion LPARENTHESIS h RPARENTHESIS funcvars altaInicioFunc bloque SEMICOLON ENDFUNC accionRetorno
    (33) g -> . INT
    (34) g -> . BOOL
    (35) g -> . FLOAT
    (36) g -> . VOID

    INT             shift and go to state 27
    BOOL            shift and go to state 26
    FLOAT           shift and go to state 25
    VOID            shift and go to state 24

    g                              shift and go to state 23

state 15

    (1) programa -> BEGIN PROGRAM createDirProc ID altaPrograma SEMICOLON a LBRACKET b . main RBRACKET SEMICOLON END
    (43) main -> . MAIN altaMain LPARENTHESIS RPARENTHESIS k bloque SEMICOLON ENDFUNC

    MAIN            shift and go to state 28

    main                           shift and go to state 29

state 16

    (6) vars -> VAR createGlobalTable c .

    LBRACKET        reduce using rule 6 (vars -> VAR createGlobalTable c .)


state 17

    (9) f -> d . COLON tipo saveTipo

    COLON           shift and go to state 30


state 18

    (8) c -> f . SEMICOLON e

    SEMICOLON       shift and go to state 31


state 19

    (10) f -> matrix .

    SEMICOLON       reduce using rule 10 (f -> matrix .)


state 20

    (19) matrix -> mataux . COLON INT

    COLON           shift and go to state 32


state 21

    (12) d -> ID . saveVarID
    (13) d -> ID . saveVarID COMMA d
    (20) mataux -> ID . saveMatrixID LSQUAREBRACKET CTEINT RSQUAREBRACKET LSQUAREBRACKET CTEINT RSQUAREBRACKET
    (21) mataux -> ID . saveMatrixID LSQUAREBRACKET CTEINT RSQUAREBRACKET LSQUAREBRACKET CTEINT RSQUAREBRACKET COMMA mataux
    (14) saveVarID -> .
    (22) saveMatrixID -> .

    COMMA           reduce using rule 14 (saveVarID -> .)
    COLON           reduce using rule 14 (saveVarID -> .)
    LSQUAREBRACKET  reduce using rule 22 (saveMatrixID -> .)

    saveVarID                      shift and go to state 34
    saveMatrixID                   shift and go to state 33

state 22

    (25) b -> funcion b .

    MAIN            reduce using rule 25 (b -> funcion b .)


state 23

    (27) funcion -> FUNC g . ID altaFuncion LPARENTHESIS h RPARENTHESIS funcvars altaInicioFunc bloque SEMICOLON ENDFUNC accionRetorno

    ID              shift and go to state 35


state 24

    (36) g -> VOID .

    ID              reduce using rule 36 (g -> VOID .)


state 25

    (35) g -> FLOAT .

    ID              reduce using rule 35 (g -> FLOAT .)


state 26

    (34) g -> BOOL .

    ID              reduce using rule 34 (g -> BOOL .)


state 27

    (33) g -> INT .

    ID              reduce using rule 33 (g -> INT .)


state 28

    (43) main -> MAIN . altaMain LPARENTHESIS RPARENTHESIS k bloque SEMICOLON ENDFUNC
    (44) altaMain -> .

    LPARENTHESIS    reduce using rule 44 (altaMain -> .)

    altaMain                       shift and go to state 36

state 29

    (1) programa -> BEGIN PROGRAM createDirProc ID altaPrograma SEMICOLON a LBRACKET b main . RBRACKET SEMICOLON END

    RBRACKET        shift and go to state 37


state 30

    (9) f -> d COLON . tipo saveTipo
    (15) tipo -> . INT
    (16) tipo -> . FLOAT
    (17) tipo -> . BOOL
    (18) tipo -> . STRING

    INT             shift and go to state 39
    FLOAT           shift and go to state 40
    BOOL            shift and go to state 41
    STRING          shift and go to state 42

    tipo                           shift and go to state 38

state 31

    (8) c -> f SEMICOLON . e
    (23) e -> . c
    (24) e -> .
    (8) c -> . f SEMICOLON e
    (9) f -> . d COLON tipo saveTipo
    (10) f -> . matrix
    (12) d -> . ID saveVarID
    (13) d -> . ID saveVarID COMMA d
    (19) matrix -> . mataux COLON INT
    (20) mataux -> . ID saveMatrixID LSQUAREBRACKET CTEINT RSQUAREBRACKET LSQUAREBRACKET CTEINT RSQUAREBRACKET
    (21) mataux -> . ID saveMatrixID LSQUAREBRACKET CTEINT RSQUAREBRACKET LSQUAREBRACKET CTEINT RSQUAREBRACKET COMMA mataux

    LBRACKET        reduce using rule 24 (e -> .)
    ID              shift and go to state 21

    c                              shift and go to state 43
    e                              shift and go to state 44
    d                              shift and go to state 17
    f                              shift and go to state 18
    mataux                         shift and go to state 20
    matrix                         shift and go to state 19

state 32

    (19) matrix -> mataux COLON . INT

    INT             shift and go to state 45


state 33

    (20) mataux -> ID saveMatrixID . LSQUAREBRACKET CTEINT RSQUAREBRACKET LSQUAREBRACKET CTEINT RSQUAREBRACKET
    (21) mataux -> ID saveMatrixID . LSQUAREBRACKET CTEINT RSQUAREBRACKET LSQUAREBRACKET CTEINT RSQUAREBRACKET COMMA mataux

    LSQUAREBRACKET  shift and go to state 46


state 34

    (12) d -> ID saveVarID .
    (13) d -> ID saveVarID . COMMA d

    COLON           reduce using rule 12 (d -> ID saveVarID .)
    COMMA           shift and go to state 47


state 35

    (27) funcion -> FUNC g ID . altaFuncion LPARENTHESIS h RPARENTHESIS funcvars altaInicioFunc bloque SEMICOLON ENDFUNC accionRetorno
    (31) altaFuncion -> .

    LPARENTHESIS    reduce using rule 31 (altaFuncion -> .)

    altaFuncion                    shift and go to state 48

state 36

    (43) main -> MAIN altaMain . LPARENTHESIS RPARENTHESIS k bloque SEMICOLON ENDFUNC

    LPARENTHESIS    shift and go to state 49


state 37

    (1) programa -> BEGIN PROGRAM createDirProc ID altaPrograma SEMICOLON a LBRACKET b main RBRACKET . SEMICOLON END

    SEMICOLON       shift and go to state 50


state 38

    (9) f -> d COLON tipo . saveTipo
    (11) saveTipo -> .

    SEMICOLON       reduce using rule 11 (saveTipo -> .)

    saveTipo                       shift and go to state 51

state 39

    (15) tipo -> INT .

    SEMICOLON       reduce using rule 15 (tipo -> INT .)
    COMMA           reduce using rule 15 (tipo -> INT .)
    RPARENTHESIS    reduce using rule 15 (tipo -> INT .)


state 40

    (16) tipo -> FLOAT .

    SEMICOLON       reduce using rule 16 (tipo -> FLOAT .)
    COMMA           reduce using rule 16 (tipo -> FLOAT .)
    RPARENTHESIS    reduce using rule 16 (tipo -> FLOAT .)


state 41

    (17) tipo -> BOOL .

    SEMICOLON       reduce using rule 17 (tipo -> BOOL .)
    COMMA           reduce using rule 17 (tipo -> BOOL .)
    RPARENTHESIS    reduce using rule 17 (tipo -> BOOL .)


state 42

    (18) tipo -> STRING .

    SEMICOLON       reduce using rule 18 (tipo -> STRING .)
    COMMA           reduce using rule 18 (tipo -> STRING .)
    RPARENTHESIS    reduce using rule 18 (tipo -> STRING .)


state 43

    (23) e -> c .

    LBRACKET        reduce using rule 23 (e -> c .)


state 44

    (8) c -> f SEMICOLON e .

    LBRACKET        reduce using rule 8 (c -> f SEMICOLON e .)


state 45

    (19) matrix -> mataux COLON INT .

    SEMICOLON       reduce using rule 19 (matrix -> mataux COLON INT .)


state 46

    (20) mataux -> ID saveMatrixID LSQUAREBRACKET . CTEINT RSQUAREBRACKET LSQUAREBRACKET CTEINT RSQUAREBRACKET
    (21) mataux -> ID saveMatrixID LSQUAREBRACKET . CTEINT RSQUAREBRACKET LSQUAREBRACKET CTEINT RSQUAREBRACKET COMMA mataux

    CTEINT          shift and go to state 52


state 47

    (13) d -> ID saveVarID COMMA . d
    (12) d -> . ID saveVarID
    (13) d -> . ID saveVarID COMMA d

    ID              shift and go to state 53

    d                              shift and go to state 54

state 48

    (27) funcion -> FUNC g ID altaFuncion . LPARENTHESIS h RPARENTHESIS funcvars altaInicioFunc bloque SEMICOLON ENDFUNC accionRetorno

    LPARENTHESIS    shift and go to state 55


state 49

    (43) main -> MAIN altaMain LPARENTHESIS . RPARENTHESIS k bloque SEMICOLON ENDFUNC

    RPARENTHESIS    shift and go to state 56


state 50

    (1) programa -> BEGIN PROGRAM createDirProc ID altaPrograma SEMICOLON a LBRACKET b main RBRACKET SEMICOLON . END

    END             shift and go to state 57


state 51

    (9) f -> d COLON tipo saveTipo .

    SEMICOLON       reduce using rule 9 (f -> d COLON tipo saveTipo .)


state 52

    (20) mataux -> ID saveMatrixID LSQUAREBRACKET CTEINT . RSQUAREBRACKET LSQUAREBRACKET CTEINT RSQUAREBRACKET
    (21) mataux -> ID saveMatrixID LSQUAREBRACKET CTEINT . RSQUAREBRACKET LSQUAREBRACKET CTEINT RSQUAREBRACKET COMMA mataux

    RSQUAREBRACKET  shift and go to state 58


state 53

    (12) d -> ID . saveVarID
    (13) d -> ID . saveVarID COMMA d
    (14) saveVarID -> .

    COMMA           reduce using rule 14 (saveVarID -> .)
    COLON           reduce using rule 14 (saveVarID -> .)

    saveVarID                      shift and go to state 34

state 54

    (13) d -> ID saveVarID COMMA d .

    COLON           reduce using rule 13 (d -> ID saveVarID COMMA d .)


state 55

    (27) funcion -> FUNC g ID altaFuncion LPARENTHESIS . h RPARENTHESIS funcvars altaInicioFunc bloque SEMICOLON ENDFUNC accionRetorno
    (37) h -> . param
    (38) h -> .
    (39) param -> . ID COLON tipo saveParamVar j

    RPARENTHESIS    reduce using rule 38 (h -> .)
    ID              shift and go to state 61

    h                              shift and go to state 59
    param                          shift and go to state 60

state 56

    (43) main -> MAIN altaMain LPARENTHESIS RPARENTHESIS . k bloque SEMICOLON ENDFUNC
    (45) k -> . vars
    (46) k -> .
    (6) vars -> . VAR createGlobalTable c

    LBRACKET        reduce using rule 46 (k -> .)
    VAR             shift and go to state 10

    vars                           shift and go to state 63
    k                              shift and go to state 62

state 57

    (1) programa -> BEGIN PROGRAM createDirProc ID altaPrograma SEMICOLON a LBRACKET b main RBRACKET SEMICOLON END .

    $end            reduce using rule 1 (programa -> BEGIN PROGRAM createDirProc ID altaPrograma SEMICOLON a LBRACKET b main RBRACKET SEMICOLON END .)


state 58

    (20) mataux -> ID saveMatrixID LSQUAREBRACKET CTEINT RSQUAREBRACKET . LSQUAREBRACKET CTEINT RSQUAREBRACKET
    (21) mataux -> ID saveMatrixID LSQUAREBRACKET CTEINT RSQUAREBRACKET . LSQUAREBRACKET CTEINT RSQUAREBRACKET COMMA mataux

    LSQUAREBRACKET  shift and go to state 64


state 59

    (27) funcion -> FUNC g ID altaFuncion LPARENTHESIS h . RPARENTHESIS funcvars altaInicioFunc bloque SEMICOLON ENDFUNC accionRetorno

    RPARENTHESIS    shift and go to state 65


state 60

    (37) h -> param .

    RPARENTHESIS    reduce using rule 37 (h -> param .)


state 61

    (39) param -> ID . COLON tipo saveParamVar j

    COLON           shift and go to state 66


state 62

    (43) main -> MAIN altaMain LPARENTHESIS RPARENTHESIS k . bloque SEMICOLON ENDFUNC
    (47) bloque -> . LBRACKET l RBRACKET

    LBRACKET        shift and go to state 67

    bloque                         shift and go to state 68

state 63

    (45) k -> vars .

    LBRACKET        reduce using rule 45 (k -> vars .)


state 64

    (20) mataux -> ID saveMatrixID LSQUAREBRACKET CTEINT RSQUAREBRACKET LSQUAREBRACKET . CTEINT RSQUAREBRACKET
    (21) mataux -> ID saveMatrixID LSQUAREBRACKET CTEINT RSQUAREBRACKET LSQUAREBRACKET . CTEINT RSQUAREBRACKET COMMA mataux

    CTEINT          shift and go to state 69


state 65

    (27) funcion -> FUNC g ID altaFuncion LPARENTHESIS h RPARENTHESIS . funcvars altaInicioFunc bloque SEMICOLON ENDFUNC accionRetorno
    (29) funcvars -> . vars
    (30) funcvars -> .
    (6) vars -> . VAR createGlobalTable c

    LBRACKET        reduce using rule 30 (funcvars -> .)
    VAR             shift and go to state 10

    vars                           shift and go to state 71
    funcvars                       shift and go to state 70

state 66

    (39) param -> ID COLON . tipo saveParamVar j
    (15) tipo -> . INT
    (16) tipo -> . FLOAT
    (17) tipo -> . BOOL
    (18) tipo -> . STRING

    INT             shift and go to state 39
    FLOAT           shift and go to state 40
    BOOL            shift and go to state 41
    STRING          shift and go to state 42

    tipo                           shift and go to state 72

state 67

    (47) bloque -> LBRACKET . l RBRACKET
    (48) l -> . estatuto l
    (49) l -> .
    (50) estatuto -> . estatutotipos SEMICOLON
    (51) estatutotipos -> . asignacion
    (52) estatutotipos -> . condicion
    (53) estatutotipos -> . ciclo
    (54) estatutotipos -> . escritura
    (55) estatutotipos -> . llamadafunc
    (56) estatutotipos -> . specialfunc
    (57) estatutotipos -> . return
    (58) asignacion -> . ID exp_asign aa EQUAL exp_12 expresion exp_13
    (124) condicion -> . IF LPARENTHESIS expresion RPARENTHESIS estatuto_if_1 bloque s estatuto_endif
    (130) ciclo -> . WHILE estatuto_while_1 LPARENTHESIS expresion RPARENTHESIS estatuto_while_2 bloque estatuto_while_3
    (134) escritura -> . PRINT LPARENTHESIS ah RPARENTHESIS
    (140) llamadafunc -> . CALL ID estatuto_llamadafunc_1 LPARENTHESIS t RPARENTHESIS
    (147) specialfunc -> . opfunc
    (148) specialfunc -> . dibujafunc
    (146) return -> . RETURN exp
    (149) opfunc -> . randomfunc
    (151) dibujafunc -> . al am an
    (150) randomfunc -> . RANDOM LPARENTHESIS exp COMMA exp RPARENTHESIS
    (152) al -> . linewidthfunc
    (153) al -> .
    (158) linewidthfunc -> . LINEWIDTH LPARENTHESIS exp RPARENTHESIS SEMICOLON

    RBRACKET        reduce using rule 49 (l -> .)
    ID              shift and go to state 89
    IF              shift and go to state 90
    WHILE           shift and go to state 75
    PRINT           shift and go to state 77
    CALL            shift and go to state 94
    RETURN          shift and go to state 73
    RANDOM          shift and go to state 85
    LINECOLOR       reduce using rule 153 (al -> .)
    STARTFILL       reduce using rule 153 (al -> .)
    LINE            reduce using rule 153 (al -> .)
    SQUARE          reduce using rule 153 (al -> .)
    CIRCLE          reduce using rule 153 (al -> .)
    STAR            reduce using rule 153 (al -> .)
    TRIANGLE        reduce using rule 153 (al -> .)
    ARC             reduce using rule 153 (al -> .)
    LINEWIDTH       shift and go to state 91

    randomfunc                     shift and go to state 87
    dibujafunc                     shift and go to state 76
    ciclo                          shift and go to state 78
    llamadafunc                    shift and go to state 79
    estatuto                       shift and go to state 80
    estatutotipos                  shift and go to state 81
    condicion                      shift and go to state 82
    specialfunc                    shift and go to state 83
    return                         shift and go to state 84
    linewidthfunc                  shift and go to state 86
    al                             shift and go to state 74
    opfunc                         shift and go to state 88
    asignacion                     shift and go to state 92
    l                              shift and go to state 93
    escritura                      shift and go to state 95

state 68

    (43) main -> MAIN altaMain LPARENTHESIS RPARENTHESIS k bloque . SEMICOLON ENDFUNC

    SEMICOLON       shift and go to state 96


state 69

    (20) mataux -> ID saveMatrixID LSQUAREBRACKET CTEINT RSQUAREBRACKET LSQUAREBRACKET CTEINT . RSQUAREBRACKET
    (21) mataux -> ID saveMatrixID LSQUAREBRACKET CTEINT RSQUAREBRACKET LSQUAREBRACKET CTEINT . RSQUAREBRACKET COMMA mataux

    RSQUAREBRACKET  shift and go to state 97


state 70
